修复页面在后台时再次切换回页面时轮播乱序的问题

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="zh-hans">
     <title>无缝的轮播</title>
     <link rel="stylesheet" href="./轮播.css">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 <div class="window" id="window">
