--- a/轮播练习/轮播.html
+++ b/轮播练习/轮播.html
@@ -23,4 +23,9 @@
 </body>
 <script src="jquery-3.3.1.min.js"></script>
 <script src="轮播.js"></script>
+<script>
+    setInterval(function(){
+    console.log(new Date())
+  },1000)
+</script>
 </html>
