添加了圖片按鈕

--- a/轮播练习/轮播.html
+++ b/轮播练习/轮播.html
@@ -17,15 +17,15 @@
       <img src="photos/img3.png" alt="">
       <img src="photos/img4.png" alt="">
     </div>
-    
   </div>
-  
+  <div class="buttonwrapper">
+    <button>1</button>
+    <button>2</button>
+    <button>3</button>
+    <button>4</button>
+  </div> 
 </body>
 <script src="jquery-3.3.1.min.js"></script>
 <script src="轮播.js"></script>
-<script>
-    setInterval(function(){
-    console.log(new Date())
-  },1000)
-</script>
+
 </html>
