--- a/轮播练习/轮播.html
+++ b/轮播练习/轮播.html
@@ -10,20 +10,27 @@
 </head>
 
 <body>
-  <div class="window">
-    <div class="images">
-      <img src="photos/img1.png" alt="">
-      <img src="photos/img2.png" alt="">
-      <img src="photos/img3.png" alt="">
-      <img src="photos/img4.png" alt="">
+  <div id="container">
+    <div class="window">
+      <div class="images">
+        <img src="photos/img1.png" alt="">
+        <img src="photos/img2.png" alt="">
+        <img src="photos/img3.png" alt="">
+        <img src="photos/img4.png" alt="">
+      </div>
+    </div>
+    <div class="buttonwrapper">
+      <button>1</button>
+      <button>2</button>
+      <button>3</button>
+      <button>4</button>
+    </div>
+    <div id="controls" style="text-align:center">
+      <button id="previous">上一张</button>
+      <button id="next">下一张</button>
     </div>
   </div>
-  <div class="buttonwrapper">
-    <button>1</button>
-    <button>2</button>
-    <button>3</button>
-    <button>4</button>
-  </div> 
+
 </body>
 <script src="jquery-3.3.1.min.js"></script>
 <script src="轮播.js"></script>
