--- a/轮播练习/carousel.html
+++ b/轮播练习/carousel.html
@@ -6,11 +6,11 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Document</title>
-  <link rel="stylesheet" href="轮播.css">
+  <link rel="stylesheet" href="carousel.css">
 </head>
 
 <body>
-  <div id="container">
+  
     <div class="window">
       <div class="images">
         <img src="photos/img1.png" alt="">
@@ -29,10 +29,10 @@
       <button id="previous">上一张</button>
       <button id="next">下一张</button>
     </div>
-  </div>
+  
 
 </body>
 <script src="jquery-3.3.1.min.js"></script>
-<script src="轮播.js"></script>
+<script src="carousel.js"></script>
 
 </html>
