--- a/轮播练习/carousel.html
+++ b/轮播练习/carousel.html
@@ -10,7 +10,7 @@
 </head>
 
 <body>
-  
+  <div class="container">
     <div class="window">
       <div class="images">
         <img src="photos/img1.png" alt="">
@@ -29,7 +29,7 @@
       <button id="previous">上一张</button>
       <button id="next">下一张</button>
     </div>
-  
+  </div>
 
 </body>
 <script src="jquery-3.3.1.min.js"></script>
