--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="zh-hans">
     <title>无缝的轮播</title>
-    <link rel="stylesheet" href="./轮播.css">
+    <link rel="stylesheet" href="./carousel.css">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
@@ -17,5 +17,5 @@
 </div>
 </body>
 <script src="jquery-3.3.1.min.js"></script>
-<script src="轮播.js"></script>
+<script src="carousel.js"></script>
 </html>
